# DiskRaptor

./: .gitignore  BUILD_LOG.txt  DEPLOY_LOG.txt  Dockerfile.linux  README-QT.md  README.md  __check_release.mjs  __release_status.txt  _deploy_as_admin.ps1  _rebuild_qt.ps1  bootstrap.cmd  build-appimage.sh  build-linux-and-upload.ps1  build-qt.bat  build-qt.sh  build.cmd  build.sh  build_rust_and_deploy.ps1  bump_retag.bat  check_all_os_release.mjs  check_deploy.txt  check_release.py  check_state.mjs  ci_debug.md  ci_fix_report.txt  cleanup_report.txt  copy_as_admin.vbs  debug_scan.js  deploy-qt.bat  deploy.bat  deploy.cmd  deploy3.ps1  deploy_6.bat  deploy_elevated.bat  deploy_fix.ps1  deploy_to_6.ps1  deploy_verify.txt  diff_launcher.txt  do_build.bat  e2e-test.mjs  (+51 more)
.cargo/: config.toml
.git-rewrite/: backup-refs  commit  heads  index  message  parse  revs
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml  release-qt.yml
frontend/: app.js  chunkloader.js  diagnostic.html  diagram-resize-test.html  diagrams.js  dupscanner.js  galaxyview.js  i18n.js  iconcache.js  index.html  qt-bridge.js  splitter.js  stats.js  style.css  tauri-api-bridge.js  tests.html  topfiles.js  treeview.js  uitest-matrix.html  virtualscroll.js
frontend/galaxyview/: animation.js  config.js  data-mapper.js  effects.js  insights.js  interaction.js  live-scan.js  lod.js  plugin-api.js  spatial-index.js  timeline.js
frontend/modules/: emptyfolders.js  recentchanges.js
images/: icon.icns
installer/: DiskRaptor-MAS.entitlements  DiskRaptor.entitlements  Info.plist.in
installer/nsis/: DiskRaptor.nsi
modulesPro/: build_module.bat  duplicateScan.exp  duplicateScan.lib
modulesPro/duplicateScan/: CMakeLists.txt  duplicate_scan.cpp
modulesPro/include/: module_pro.h
qt-app/: CMakeLists.txt  _build_msi.bat  _run_build.bat
qt-app/resources/: resources.qrc
qt-app/resources/linux/: DiskRaptor.desktop.in
qt-app/resources/windows/: app.rc  launcher.rc  launcher.rc.in
qt-app/src/: ipcbridge.cpp  ipcbridge.h  launcher.cpp  main.cpp  platform_utils.cpp  platform_utils.h  scanner.cpp  scanner.h  webviewwindow.cpp  webviewwindow.h
qt-app/src/modules/: module_loader.cpp  module_loader.h
raw/: info.txt  other.avif  software_database.xlsx
release-assets/: DiskRaptor-Windows-x64.msi  DiskRaptor-macOS-x64
scripts/: _verify.mjs  apply_fixes.py  deploy-and-test.ps1  deploy-fix.ps1  diskraptor-e2e-test.mjs  e2e-scan-test.mjs  extract-locales.mjs  fix_galaxy_issues.py  generate-icns.mjs  generate-icons.mjs  hotfix.py  install-test.mjs  playwright-qt-e2e.mjs  pr-branch.bat  run-installed-test.mjs  run-tests.mjs  run-uitest.mjs  serve-website.js  test_launch.cmd  update-website-locales.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: dll_test.rs  scanner_test.rs
src-tauri/src/: commands.rs  lib.rs  main.rs  scanner_api.rs
src-tauri/src/scanner/: mod.rs  tree.rs  walker.rs  win32_scanner.rs
src-tauri/src/streaming/: chunker.rs
src-tauri/tests/: scanner_test.rs
